<resources>
    <string name="app_name">My Rooms</string>
    <!-- Button -->
    <string name="add">Add</string>
    <string name="add_more">Add More</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="setting">Setting</string>
    <string name="update">Update</string>
    <string name="name">Name</string>
    <string name="delete">Delete</string>
    <string name="send">Send bill</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Input label -->
    <string name="input_customer_name">Customer\'s name</string>
    <string name="input_partner_name">Partner\'s name</string>
    <string name="input_customer_phone">Phone number</string>
    <string name="input_room_name">Room\'s name</string>
    <string name="input_customer_birthday">Birthday</string>
    <string name="input_id_card">ID Card</string>
    <string name="input_cost"></string>

    <!-- Hint -->
    <string name="input_room_name_hint">Input room name here...</string>
    <string name="input_name_hint">Input name here...</string>
    <string name="input_phone_hint">Input phone here...</string>
    <string name="input_card_hint">Input card ID here (Optional)...</string>
    <string name="input_birthday_hint">Input birthday here (Optional) ...</string>
    <string name="input_cost_hint">Input cost here...</string>

    <!-- Label text view -->
    <string name="room_holder_partners_group_label">Partners</string>
    <string name="room_holder_group_label">Room holder</string>
    <string name="no_data_available">There is nobody at current</string>
    <string name="empty_list_message">Maybe they have someone to stay with</string>
    <string name="add_them">Add them!</string>
    <string name="have_not_paid">Have not paid yet</string>
    <string name="paid">Already paid for bill</string>
    <string name="holders_count">%1$d people</string>
    <string name="bill_detail">%1$d people x %2$d VNĐ = %3$d VNĐ</string>
    <string name="month_detail">%1$d VNĐ</string>

    <!-- Validation error -->
    <string name="invalid_birthday">Invalid birthday format!</string>
    <string name="field_cannot_empty">This field cannot be empty!</string>

    <!-- Message -->
    <string name="created_room_successful">Created room \'%1$s\' successfully!</string>
    <string name="deleted_room_successful">Removed room \'%1$s\' successfully!</string>
    <string name="deleted_room_failed">Error occurred while deleting room \'%1$s\'</string>
    <string name="created_partner_unsuccessfully">Cannot create partner \'%1$s\'</string>
    <string name="created_attribute_unsuccessfully">Cannot create attribute \'%1$s\'</string>
    <string name="updated_attribute_successfully">Updated \'%1$s\' price: %2$s apply for each: %3$s</string>
    <string name="updated_attribute_unsuccessfylly">Error occurred while updating \'%1$s\' price</string>

    <!-- Currency-->
    <string name="viet_name_dong">VNĐ</string>
    <string name="vnd_placeholder">%1$d VNĐ</string>
</resources>


