<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingEnd="40dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/partner_profile_image"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_placeholder"
        app:civ_border_color="#000"
        app:civ_border_width="2dp" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/partner_name_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/partner_profile_image"
        android:ems="10"
        android:hint="@string/input_name_hint"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/input_partner_name"
        app:met_floatingLabelTextColor="@color/colorPrimaryDark"
        app:met_floatingLabelTextSize="12sp"
        app:met_helperText="Tony Stark"
        app:met_helperTextAlwaysShown="true"
        app:met_iconLeft="@drawable/ic_partner"
        app:met_iconPadding="0dp" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/partner_phone_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/partner_name_id"
        android:ems="10"
        android:hint="@string/input_phone_hint"
        android:inputType="number"
        android:singleLine="false"
        android:textSize="12sp"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/input_customer_phone"
        app:met_floatingLabelTextColor="@color/colorPrimaryDark"
        app:met_floatingLabelTextSize="12sp"
        app:met_helperText="0902xxxxxx"
        app:met_helperTextAlwaysShown="true"
        app:met_iconLeft="@drawable/ic_phone"
        app:met_iconPadding="0dp" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/partner_card_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/partner_phone_id"
        android:ems="10"
        android:hint="@string/input_card_hint"
        android:inputType="number"
        android:singleLine="false"
        android:textSize="12sp"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/input_id_card"
        app:met_floatingLabelTextColor="@color/colorPrimaryDark"
        app:met_floatingLabelTextSize="12sp"
        app:met_iconLeft="@drawable/ic_cardid"
        app:met_iconPadding="0dp"
        app:met_helperText="025xxxxxx"
        app:met_helperTextAlwaysShown="true"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/partner_birthday_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/partner_card_id"
        android:ems="10"
        android:hint="@string/input_birthday_hint"
        android:inputType="date"
        android:singleLine="false"
        android:textSize="12sp"
        app:met_floatingLabel="highlight"
        app:met_iconLeft="@drawable/ic_cake"
        app:met_iconPadding="0dp"
        app:met_floatingLabelText="@string/input_customer_birthday"
        app:met_floatingLabelTextColor="@color/colorPrimaryDark"
        app:met_floatingLabelTextSize="12sp"
        app:met_helperText="02/07/1964"
        app:met_helperTextAlwaysShown="true"/>

</RelativeLayout>