<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:text="@string/room_holder_group_label"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow android:layout_weight="6">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp">

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/id_room_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:ems="10"
                        android:hint="@string/input_room_name"
                        android:inputType="textPersonName"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textSize="12sp"
                        app:met_floatingLabel="highlight"
                        app:met_floatingLabelText="@string/input_room_name"
                        app:met_floatingLabelTextColor="@color/colorAccent"
                        app:met_floatingLabelTextSize="12sp" />


                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/id_customer_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:ems="10"
                        android:hint="@string/input_customer_name"
                        android:inputType="textPersonName"
                        android:textSize="12sp"
                        app:met_floatingLabel="highlight"
                        app:met_floatingLabelText="@string/input_customer_name"
                        app:met_floatingLabelTextColor="@color/colorPrimaryDark"
                        app:met_floatingLabelTextSize="12sp" />

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/id_customer_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:ems="10"
                        android:hint="@string/input_customer_phone"
                        android:inputType="textPersonName"
                        android:singleLine="false"
                        android:textSize="12sp"
                        app:met_floatingLabel="highlight"
                        app:met_floatingLabelText="@string/input_customer_phone"
                        app:met_floatingLabelTextColor="@color/colorPrimaryDark"
                        app:met_floatingLabelTextSize="12sp" />


                </LinearLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="2">


                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profile_image"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_above="@+id/button"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="15dp"
                        android:src="@drawable/ic_placeholder"
                        app:civ_border_color="#000"
                        app:civ_border_width="2dp" />

                    <Button
                        android:id="@+id/button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:text="24 tuổi"
                        android:textAppearance="@style/TextAppearance.Compat.Notification.Title.Media" />
                </RelativeLayout>
            </TableRow>

        </TableLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:text="@string/room_holder_partners_group_label"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:textStyle="bold" />


        </RelativeLayout>


        <android.support.v7.widget.RecyclerView

            android:id="@+id/rv_holder_partner_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" />

        <com.gc.materialdesign.views.ButtonFlat
            android:id="@+id/btn_add_partner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1E88E5"
            android:text="@string/add_more" />

    </LinearLayout>
</ScrollView>